# rustmailer

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  about.hbs  about.toml  build.rs  cliff.toml  license.html
.github/: FUNDING.yml
.github/workflows/: release.yml
assets/: 2025-08-11-1322.excalidraw
docker/: Dockerfile  README.md  build.sh
env/: rustmailer.env
protos/: rustmailer.proto
src/: main.rs
src/modules/: mod.rs
src/modules/account/: dispatcher.rs  entity.rs  migration.rs  mod.rs  payload.rs  since.rs  status.rs  v2.rs
src/modules/autoconfig/: entity.rs  load.rs  mod.rs  tests.rs
src/modules/bounce/: detect.rs  mod.rs  models.rs  parser.rs  title.rs
src/modules/cache/: mod.rs  model.rs  sync_type.rs
src/modules/cache/disk/: mod.rs  task.rs
src/modules/cache/imap/: address.rs  envelope.rs  envelope_v2.rs  mailbox.rs  manager.rs  migration.rs  minimal.rs  mod.rs  v2.rs  (+3 more)
src/modules/common/: auth.rs  error.rs  log.rs  lru.rs  mod.rs  paginated.rs  parallel.rs  rustls.rs  signal.rs  timeout.rs  tls.rs  validator.rs
src/modules/context/: controller.rs  executors.rs  mod.rs  status.rs
src/modules/database/: manager.rs  mod.rs  tests.rs
src/modules/envelope/: detect.rs  extractor.rs  mod.rs
src/modules/error/: code.rs  handler.rs  mod.rs
src/modules/grpc/: auth.rs  error.rs  mod.rs  server.rs  tests.rs
src/modules/hook/: channel.rs  entity.rs  mod.rs  payload.rs  task.rs  tests.rs
src/modules/imap/: capabilities.rs  client.rs  decoder.rs  executor.rs  flags.rs  manager.rs  mod.rs  oauth2.rs  pool.rs  section.rs  session.rs  stats.rs  tests.rs
src/modules/license/: cache.rs  mod.rs
src/modules/logger/: file.rs  mod.rs
src/modules/mailbox/: create.rs  delete.rs  list.rs  mod.rs  rename.rs  subscribe.rs
src/modules/message/: append.rs  attachment.rs  content.rs  copy.rs  delete.rs  flag.rs  full.rs  list.rs  mod.rs  mv.rs  tags.rs  transfer.rs
src/modules/metrics/: endpoint.rs  mod.rs
src/modules/oauth2/: entity.rs  flow.rs  mod.rs  pending.rs  task.rs  token.rs
src/modules/overview/: clean.rs  metrics.rs  mod.rs  saver.rs
src/modules/rest/: assets.rs  mod.rs  response.rs
src/modules/scheduler/: cleaner.rs  context.rs  flow.rs  handlers.rs  mod.rs  model.rs  periodic.rs  processor.rs  result.rs  retry.rs  store.rs  task.rs  tests.rs  updater.rs
src/modules/settings/: cli.rs  dir.rs  mod.rs  proxy.rs  system.rs
src/modules/smtp/: client.rs  executor.rs  manager.rs  mod.rs  pool.rs  tests.rs  util.rs
src/modules/tasks/: mod.rs  queue.rs
src/modules/token/: mod.rs  payload.rs  root.rs
src/modules/utils/: encrypt.rs  mod.rs  net.rs  shutdown.rs  tls.rs
src/modules/version/: mod.rs
web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
web/src/: index.css  main.tsx  routeTree.gen.ts
web/src/api/: axiosInstance.ts  index.ts
web/src/components/: ace-editor.tsx  api-docs.tsx  button.tsx  command-menu.tsx  confirm-dialog.tsx  editor-with-draft.tsx  long-text.tsx  multi-select.tsx  password-input.tsx  profile-dropdown.tsx  select-dropdown.tsx  table-skeleton.tsx  theme-switch.tsx  tree-view.tsx  virtualized-select.tsx
web/src/context/: theme-context.tsx
web/src/hooks/: use-copy-messages.ts  use-dialog-state.tsx  use-flag-messages.ts  use-minimal-account-list.tsx  use-mobile.tsx  use-move-messages.ts  use-proxy.tsx  use-toast.ts
web/src/lib/: build-tree.ts  utils.ts
web/src/routes/: __root.tsx
web/src/stores/: authStore.ts
(+289 files in other folders)
