[package]
name = "rustmailer"
version = "1.5.2"
edition = "2021"

[[bin]]
name = "rustmailer"
path = "src/main.rs"


[features]
default = []
vendored-openssl = ["openssl-sys"]

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.49", features = ["derive", "env"] }
mimalloc = "0.1.48"
native_db = "0.8.2"
redb = "2.6.2"
itertools = "0.14.0"
native_model = "0.4.20"
poem = { version = "3.1.12", features = ["embed", "compression", "rustls"] }
poem-derive = "3.1.12"
poem-openapi = { version = "5.1.16", features = [
    "openapi-explorer",
    "rapidoc",
    "scalar",
    "redoc",
    "swagger-ui",
    "email",
] }
poem-grpc = { version = "0.5.7", features = [
    "gzip",
    "deflate",
    "brotli",
    "zstd",
] }
min_jwt = { version = "0.10.0", features = ["ring", "serde", "serde_json"] }
ring = { version = "0.17.14", features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
base64 = "0.22.1"
snafu = "0.8.9"
reqwest = { version = "0.12.24", default-features = false, features = [
    "json",
    "stream",
    "native-tls",
    # "rustls-tls",
    "blocking",
    "socks",
] }
tokio-socks = "0.5.2"
http = "1.3.1"
regex = "1.12.2"
email_address = "0.2.9"
futures = "0.3.31"
utf7-imap = "0.3.2"
imap-proto = "0.16.6"
mail-parser = { version = '0.11.1', features = ["serde"] }
mail-send = "0.5.2"
tokio-rustls = { version = "0.26.4", default-features = false, features = [
    "ring",
    "tls12",
] }
timeago = "0.5.0"
handlebars = "6.3.2"
ahash = "0.8.12"
oauth2 = { version = "5.0.0", features = ["reqwest-blocking"] }
url = { version = "2.5.7", features = ["serde"] }
sysinfo = "0.37.2"
num_cpus = "1.17.0"
proc-macro2 = "1.0.101"
cacache = { version = "13.1.0", default-features = false, features = [
    "tokio-runtime",
    "mmap",
] }
rand = "0.9.2"
encoding_rs = "0.8.35"
async-imap = { version = "0.11.1", default-features = false, features = [
    "runtime-tokio",
    "compress",
] }
webpki-roots = "1.0.3"
rustls = { version = "0.23.32", default-features = false, features = ["ring"] }
rustls-pki-types = "1.12.0"
tokio-io-timeout = "1.2.1"
bb8 = "0.9.0"
# Note: Keep prost and prost-types at the same version to avoid potential conflicts.
# Make sure to test thoroughly before upgrading or changing versions.
prost = "0.13.5"
prost-types = "0.13.5"
semver = "1.0.27"
governor = "0.10.1"
async-nats = { version = "0.44.2" }
lru = "0.16.2"
mime_guess = "2.0.5"
pulldown-cmark = "0.13.0"
html-escape = "0.2.13"
hex = "0.4.3"
scraper = "0.24.0"
time = { version = "0.3.44", features = [
    "formatting",
    "parsing",
    "local-offset",
] }
time-tz = "2.0.0"
rust-embed = "8.7.2"
murmur3 = "0.5.2"
autoconfig = "0.4.0"
urlencoding = "2.1.3"
vrl = "0.27.0"
dashmap = "6.1.0"
prometheus = "0.14.0"
# Statically links OpenSSL by compiling from source, avoiding system library dependencies
openssl-sys = { version = "0.9.109", optional = true, features = ["vendored"] }
image = "0.25.8"
gethostname = "1.0.2"
glob = "0.3.3"
[build-dependencies]
poem-grpc-build = "0.5.7"

[dev-dependencies]
#bincode = "1.3.3"
#secret-lib = "1.0.0"
tempfile = "3.23.0"
